--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ cmake-build-debug
 *.exe
 *.out
 *.app
+
+# cmake
+CmakeFiles
+CMakeCache.txt
+Makefile
+Programs*
+cmake_install.cmake
+.cmaketools.json
